# H4ckT0b3rF3st-2k21

./: .gitignore  LICENSE  README.md  i_love_git.txt
bloodbankmanagement/: README.md
challenges/: readme.md
challenges/Drawing Challenge/: Readme.md  readme.md
challenges/Redesign_Tux/: README.md
challenges/Sound_effect_challenge/: readme.md
challenges/Sounds_effect_challenge/: readme.md
challenges/label_them_all/: README.md  additional_pokemons.csv  pokemon_names.csv
challenges/logo_design/: README.md
challenges/solving_project_euler/: README.md
challenges/sort_list_challenge/: BubbleSort_imadken.c  BubbleSort_lenspira.js  BubbleSort_santiariza15.py  Bubblesort_parinay602.py  Ide.py  Merge Sort Java.java  README.md  Star_Pattern.py  merge_sort_Ritik-09.c  selection_sort_amdjedbens.py  shellcode-2  shivam.py  sort_by_minimum_Maria-Djadi01.py
challenges/translation/: YasmineLAKRIB_README_fr.md  readme.md  sabrina368_README_fr.md
challenges/website_design/: README.md
earth/: README.md
onplayerpong/: README.md
open_source_stories/: README.md  tux's _twin.md
projects/: readme.md
projects/AutoClicker/: AutoClicker.py  README.md
projects/Autotyper/: Autotyper.py  README.md
projects/BUG_BOUNTY_HUNTER/: README.md  SignIn.php  SignUp.php  home.php  index.php  logout.php
snake_game/: README.md  snake_game.pde
text animation/: py.py
translation/: readme.md
tux_game_prize/: readme.md
your_projects/: README.md
your_projects/allaeddineomc_tic-tac-toe/src/: main.py  meson.build  tic-tac-toe.in  tic_tac_toe.gresource.xml
(+241 files in other folders)
